--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-filter = "*"
 djoser = "*"
 django-cors-headers = "*"
 pillow = "*"
+psycopg2 = "*"
 whitenoise = "*"
 gunicorn = "*"
 waitress = "*"
